force-app/main/default/objects/Ordonnance__c/Ordonnance__c.object-meta.xml
<CustomObject>
    <description>Objet représentant les Ordonnances liées aux ventes de la pharmacie.</description>
    <label>Ordonnance</label>
    <nameField>
        <displayFormat>Ord-{0000}</displayFormat>
        <label>Ordonnance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordonnances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>