force-app/main/default/objects/Ordonnance__c/fields/cache__c.field-meta.xml
<CustomField>
    <fullName>cache__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Champ booléen pour indiquer si la prescription est en cache</description>
    <label>caché</label>
    <type>Checkbox</type>
</CustomField>