force-app/main/default/objects/Ordonnance__c/fields/DateOrdonnance__c.field-meta.xml
<CustomField>
    <fullName>DateOrdonnance__c</fullName>
    <description>Date de création de l&apos;ordonnance</description>
    <label>Date ordonnance</label>
    <required>true</required>
    <type>Date</type>
</CustomField>