force-app/main/default/objects/Ordonnance__c/fields/DateProchaineRendezVous__c.field-meta.xml
<CustomField>
    <fullName>DateProchaineRendezVous__c</fullName>
    <description>Date du prochain rendez-vous médical du patient</description>
    <label>Date prochaine rendez-vous</label>
    <type>Date</type>
</CustomField>