force-app/main/default/objects/Ordonnance__c/fields/PrixTotal__c.field-meta.xml
<CustomField>
    <fullName>PrixTotal__c</fullName>
    <description>Le prix total de l&apos;ordonnance est la somme des prix de chaque médicament sur l&apos;ordonnance</description>
    <formula>15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>