force-app/main/default/objects/Ordonnance__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <defaultValue>true</defaultValue>
    <description>si le champ est coché y&apos;a signature du médecin sur l&apos;ordonnance sinon l&apos;absence de cette derniere</description>
    <label>Signature</label>
    <type>Checkbox</type>
</CustomField>