force-app/main/default/objects/Ordonnance__c/listViews/Ordonnances.listView-meta.xml
<ListView>
    <fullName>Ordonnances</fullName>
    <columns>NAME</columns>
    <columns>cache__c</columns>
    <columns>Signature__c</columns>
    <columns>DateOrdonnance__c</columns>
    <columns>DateProchaineRendezVous__c</columns>
    <columns>PrixTotal__c</columns>
    <filterScope>Mine</filterScope>
    <label>Ordonnances</label>
</ListView>