force-app/main/default/objects/Ordonnance__c/listViews/OrdonnancesAvecSignatureEtCache.listView-meta.xml
<ListView>
    <fullName>OrdonnancesAvecSignatureEtCache</fullName>
    <columns>NAME</columns>
    <columns>cache__c</columns>
    <columns>Signature__c</columns>
    <columns>DateOrdonnance__c</columns>
    <columns>DateProchaineRendezVous__c</columns>
    <columns>PrixTotal__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Signature__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>cache__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Ordonnances Avec Signature et Caché</label>
</ListView>